# grex

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  README.md  flatland_test_script.sh
docs/: README.md  grex-functionality.md
ros2/src/configuration/: package.xml  setup.cfg  setup.py
ros2/src/configuration/launch/: robot.launch.py  test.launch.py
ros2/src/configuration/models/maps/cumberland/: model.config  model.sdf
src/grex/: LICENSE  package.xml  setup.cfg  setup.py
src/grex/config/: agent_namespaced.rviz  default.rviz  flatland.rviz  gz_bridge.yaml  gz_waffle_bridge.yaml
src/grex/launch/: simulation.launch.py
src/grex/launch/agent/base/: agent.launch.py  agent.launch.yaml
src/grex/launch/agent/example/: agent.launch.yaml
src/grex/launch/simulator/flatland/: agent.launch.py  rewritten_yaml.py  simulator.launch.yaml  visualization.launch.yaml
src/grex/launch/simulator/gazebo/: agent.launch.yaml  simulator.launch.yaml
src/grex/models/maps/cumberland/: cumberland_flatland.yaml  model.config  model.sdf
src/grex/models/robots/: turtlebot.model.yaml  waffle.model  waffle.model.xacro
src/grex_agent_nav/: CMakeLists.txt  package.xml
src/grex_agent_nav/launch/: bringup_launch.py  localization_launch.py  multi_tb3_simulation_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_simulation_launch.py
src/grex_agent_nav/params/: nav2_params.yaml
src/launch_ros_manager/: CMakeLists.txt  package.xml
src/launch_ros_manager/launch_ros_manager_py/actions/: LaunchManagementServiceNode.py  __init__.py
src/launch_ros_manager/scripts/: manager_node
src/launch_ros_manager/srv/: ShutdownNamespace.srv
src/simulation_base/: package.xml  setup.cfg  setup.py
src/simulation_base/config/: agent.rviz  nav2_params.yaml
src/simulation_base/launch/: mas_simulation.launch.py  robot.launch.py  robot_navigation2.launch.py  robot_standalone.launch.py
src/simulation_base/launch/agent/: robot.launch.py
src/simulation_base/launch/agent/base/: agent.launch.py
src/simulation_base/launch/agent/example/: agent.launch.yaml
src/simulation_base/launch/simulator/: gazebo.launch.yaml
src/simulation_base/launch/simulator/gazebo/: agent.launch.yaml
src/simulation_base/models/robots/: waffle.model
