<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_base</name>
  <version>0.1.0</version>
  <description>This package contains simulation configurations and launch files for the Grex framework.</description>
  <maintainer email="anthony.goeckner@northwestern.edu">Anthony Goeckner</maintainer>
  <license>MIT</license>

  <exec_depend>ros_launch_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
